--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper scissors</title>
   </head>
   <body>
+    <div class="buttons">    
+      <button class="playerChoiceBut" id="rock">Rock</button>
+      <button class="playerChoiceBut" id="paper">Paper</button>
+      <button class="playerChoiceBut" id="scissors">Scissors</button>
+    </div>
+    <div id="display"></div>
+    <div id="scoreBoard"></div>
+    
     <script src="main.js"></script>
   </body>
 </html>
